; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_gpuobj.c_nouveau_gpudup_dtor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_gpuobj.c_nouveau_gpudup_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nouveau_gpuobj = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_object*)* @nouveau_gpudup_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nouveau_gpudup_dtor(%struct.nouveau_object* %0) #0 {
  %2 = alloca %struct.nouveau_object*, align 8
  %3 = alloca %struct.nouveau_gpuobj*, align 8
  store %struct.nouveau_object* %0, %struct.nouveau_object** %2, align 8
  %4 = load %struct.nouveau_object*, %struct.nouveau_object** %2, align 8
  %5 = bitcast %struct.nouveau_object* %4 to i8*
  %6 = bitcast i8* %5 to %struct.nouveau_gpuobj*
  store %struct.nouveau_gpuobj* %6, %struct.nouveau_gpuobj** %3, align 8
  %7 = load %struct.nouveau_gpuobj*, %struct.nouveau_gpuobj** %3, align 8
  %8 = getelementptr inbounds %struct.nouveau_gpuobj, %struct.nouveau_gpuobj* %7, i32 0, i32 1
  %9 = call i32 @nouveau_object_ref(i32* null, i32* %8)
  %10 = load %struct.nouveau_gpuobj*, %struct.nouveau_gpuobj** %3, align 8
  %11 = getelementptr inbounds %struct.nouveau_gpuobj, %struct.nouveau_gpuobj* %10, i32 0, i32 0
  %12 = call i32 @nouveau_object_destroy(i32* %11)
  ret void
}

declare dso_local i32 @nouveau_object_ref(i32*, i32*) #1

declare dso_local i32 @nouveau_object_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
